syntax = "proto3";

package user;

option java_multiple_files = true;
option java_package = "com.helltractor.mall.proto.user";
option java_outer_classname = "UserProto";

service UserService {
  rpc Register(RegisterReq) returns (RegisterResp) { }
  rpc Login(LoginReq) returns (LoginResp) { }
}

message RegisterReq {
  string email = 1;
  string password = 2;
  string confirm_password = 3;
}

message RegisterResp {
  int32 user_id = 1;
}

message LoginReq {
  string email = 1;
  string password = 2;
}

message LoginResp {
  int32 user_id = 1;
}